--- a/config.yaml
+++ b/config.yaml
@@ -3,10 +3,10 @@ simulation:
   area_size: [1000, 1000]  # meters
   
 vehicles:
-  mission_vehicles: 30
-  collaborative_vehicles: 20
+  mission_vehicles: 45
+  collaborative_vehicles: 18
   speed_range: [30, 120]  # km/h
-  communication_range: 250  # meters
+  communication_range: 100  # meters (from TABLE I)
   
 infrastructure:
   rsus: 5
@@ -19,7 +19,7 @@ tasks:
   computation_demand_range: [0.3, 0.45]  # GHz
   
 services:
-  total_services: 10
+  total_services: 4 # (from TABLE I, F=4)
   zipf_parameter: 0.8
   
 algorithms:
